// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EthRestakeVaultFactory EthErc20Vault private vault deployment with own escrow gas 1`] = `
Object {
  "calldataByteLength": 548,
  "gasUsed": 602399,
}
`;

exports[`EthRestakeVaultFactory EthErc20Vault private vault deployment with shared escrow gas 1`] = `
Object {
  "calldataByteLength": 548,
  "gasUsed": 453565,
}
`;

exports[`EthRestakeVaultFactory EthErc20Vault public vault deployment with own escrow gas 1`] = `
Object {
  "calldataByteLength": 548,
  "gasUsed": 578479,
}
`;

exports[`EthRestakeVaultFactory EthErc20Vault public vault deployment with shared escrow gas 1`] = `
Object {
  "calldataByteLength": 548,
  "gasUsed": 429645,
}
`;

exports[`EthRestakeVaultFactory EthRestakeVault private vault deployment with own escrow gas 1`] = `
Object {
  "calldataByteLength": 356,
  "gasUsed": 528289,
}
`;

exports[`EthRestakeVaultFactory EthRestakeVault private vault deployment with shared escrow gas 1`] = `
Object {
  "calldataByteLength": 356,
  "gasUsed": 379455,
}
`;

exports[`EthRestakeVaultFactory EthRestakeVault public vault deployment with own escrow gas 1`] = `
Object {
  "calldataByteLength": 356,
  "gasUsed": 504369,
}
`;

exports[`EthRestakeVaultFactory EthRestakeVault public vault deployment with shared escrow gas 1`] = `
Object {
  "calldataByteLength": 356,
  "gasUsed": 355535,
}
`;
